--- a/public/index.html
+++ b/public/index.html
@@ -10,28 +10,46 @@
   <div class="max-w-4xl mx-auto">
     <h1 class="text-3xl font-bold text-center mb-6">Conference Advance Reminder</h1>
 
-    <form action="/upload" method="POST" enctype="multipart/form-data" class="bg-white p-4 rounded-lg shadow-md mb-6">
-      <label class="block mb-2 font-semibold">Upload Excel File:</label>
-      <input type="file" name="excel" required class="mb-4 border p-2 rounded w-full" />
-      <button type="submit" class="bg-blue-600 text-white px-4 py-2 rounded hover:bg-blue-700">Upload</button>
-    </form>
+    <!-- Notification -->
+    <div id="success-message" class="hidden mb-4 p-4 text-green-800 bg-green-100 border border-green-300 rounded-lg"></div>
 
-    <div class="bg-white p-4 rounded-lg shadow-md">
-      <h2 class="text-xl font-semibold mb-4">Uploaded Conference Data</h2>
-      <table id="data-table" class="min-w-full table-auto border border-gray-300">
-        <thead>
-          <tr class="bg-gray-200">
-            <th class="border px-4 py-2">Name</th>
-            <th class="border px-4 py-2">Email</th>
-            <th class="border px-4 py-2">Conference</th>
-            <th class="border px-4 py-2">Date</th>
-            <th class="border px-4 py-2">Notified</th>
-          </tr>
-        </thead>
-        <tbody id="table-body">
-          <!-- Filled dynamically -->
-        </tbody>
-      </table>
+    <!-- Tab Navigation -->
+    <div class="flex justify-center mb-6">
+      <button onclick="showTab('upload')" class="tab-btn bg-blue-600 text-white px-4 py-2 rounded-l hover:bg-blue-700">Upload</button>
+      <button onclick="showTab('data')" class="tab-btn bg-blue-600 text-white px-4 py-2 rounded-r hover:bg-blue-700">Data</button>
+    </div>
+
+    <!-- Upload Tab -->
+    <div id="upload" class="tab-content">
+      <form id="upload-form" action="/upload" method="POST" enctype="multipart/form-data" class="bg-white p-4 rounded-lg shadow-md mb-6">
+        <label class="block mb-2 font-semibold">Upload Excel File:</label>
+        <input type="file" name="excel" required class="mb-4 border p-2 rounded w-full" />
+        <button type="submit" class="bg-green-600 text-white px-4 py-2 rounded hover:bg-green-700">Upload</button>
+      </form>
+    </div>
+
+    <!-- Data Tab -->
+    <div id="data" class="tab-content hidden">
+      <div class="bg-white p-4 rounded-lg shadow-md">
+        <div class="flex justify-between items-center mb-4">
+          <h2 class="text-xl font-semibold">Uploaded Conference Data</h2>
+          <button onclick="fetchData()" class="bg-indigo-600 text-white px-3 py-1 rounded hover:bg-indigo-700">Refresh</button>
+        </div>
+        <table id="data-table" class="min-w-full table-auto border border-gray-300">
+          <thead>
+            <tr class="bg-gray-200">
+              <th class="border px-4 py-2">Name</th>
+              <th class="border px-4 py-2">Email</th>
+              <th class="border px-4 py-2">Conference</th>
+              <th class="border px-4 py-2">Date</th>
+              <th class="border px-4 py-2">Notified</th>
+            </tr>
+          </thead>
+          <tbody id="table-body">
+            <!-- Filled dynamically -->
+          </tbody>
+        </table>
+      </div>
     </div>
   </div>
 
@@ -56,11 +74,47 @@
         });
     }
 
-    // Initial fetch
-    fetchData();
+    function showTab(tabId) {
+      document.querySelectorAll('.tab-content').forEach(el => el.classList.add('hidden'));
+      document.getElementById(tabId).classList.remove('hidden');
+    }
 
-    // Poll every 30 seconds to reflect changes
-    setInterval(fetchData, 30000);
+    // Show upload tab by default
+    showTab('upload');
+
+    // Upload success message simulation (only works on client-side, actual success should come from backend)
+    document.getElementById('upload-form').addEventListener('submit', function (e) {
+      e.preventDefault();
+      const formData = new FormData(this);
+      fetch('/upload', {
+        method: 'POST',
+        body: formData
+      })
+        .then(response => {
+          if (response.ok) {
+            showMessage('Excel file uploaded successfully!');
+            showTab('data');
+            fetchData();
+          } else {
+            showMessage('Failed to upload file.', true);
+          }
+        })
+        .catch(() => showMessage('An error occurred during upload.', true));
+    });
+
+    function showMessage(message, isError = false) {
+      const msg = document.getElementById('success-message');
+      msg.textContent = message;
+      msg.classList.remove('hidden');
+      msg.classList.toggle('bg-green-100', !isError);
+      msg.classList.toggle('text-green-800', !isError);
+      msg.classList.toggle('border-green-300', !isError);
+      msg.classList.toggle('bg-red-100', isError);
+      msg.classList.toggle('text-red-800', isError);
+      msg.classList.toggle('border-red-300', isError);
+
+      setTimeout(() => msg.classList.add('hidden'), 4000);
+    }
   </script>
 </body>
 </html>
